# bees-data-engineering-case

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
dashboard/: README.md  app.py
dashboard/demo_data/gold/: breweries_by_type_location.csv
dashboard/demo_data/ops/: execution_events.csv  quality_results.csv
databricks/notebooks/: README.md
databricks/notebooks/bronze/: 01_ingest_open_brewery_db.py
databricks/notebooks/gold/: 03_build_gold.py  04_quality_and_ops.py
databricks/notebooks/silver/: 02_build_silver.py
docs/: architecture.md  azure-notes.md  azure-test-guide.md  backlog.md  evaluator-quickstart.md  gcp-colab-guide.md  local-quickstart.md  monitoring-alerting.md  runbook.md  services.md
examples/: sample_breweries.json  sample_breweries_bad.json
infra/: README.md
infra/bicep/: main.bicep
orchestration/: __init__.py  luigi_pipeline.py
orchestration/adf/: README.md
output/jupyter-notebook/: bees-case-local-validation.ipynb
scripts/: run_api_pyspark_pipeline.py  run_local_pyspark_demo.py
src/: README.md
src/bees_case/: __init__.py  api_client.py  api_runner.py  bronze.py  config.py  contracts.py  dashboard_data.py  observability.py  pyspark_local.py  quality.py
tests/: README.md  conftest.py
tests/data_quality/: test_quality_gate.py
tests/integration/: test_bronze.py  test_pyspark_pipeline.py
tests/unit/: test_api_client.py  test_api_runner.py  test_config.py  test_dashboard_data.py  test_luigi_orchestration.py  test_quality.py
(+10 files in other folders)
