[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bees-data-engineering-case"
version = "0.1.0"
description = "Azure-first medallion pipeline for the Open Brewery DB case."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
local = ["pyspark>=3.5.0"]
dashboard = [
  "streamlit>=1.33.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "plotly>=5.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
